fix: scrollbar hidden behind status bar

--- a/desktop-app/app/layout.css
+++ b/desktop-app/app/layout.css
@@ -7,6 +7,7 @@
 }
 
 .iconColumn {
+  flex-shrink: 0;
   width: 50px;
   height: 100%;
   display: flex;
@@ -17,8 +18,10 @@
 }
 
 .contentColumn {
-  width: calc(100vw - 50px);
   height: 100%;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+  overflow: hidden;
+  flex-basis: 0;
 }
